spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,,600,700,800,|Quicksand:300,400,500,700');
-@import url('https://fonts.googleapis.com/css?family=Raleway:400,500,600,700,800&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,,600,700,800,|Raleway:400,500,600,700,800');
 body{color:#dcddde; font-family:"Open Sans", sans-serif; overflow-x: hidden; position: relative; font-size: 14px; margin: 0; line-height: normal; font-weight: 400; background-color: #ffffff; letter-spacing: .1px}
 img{max-width: 100%; border: 0; vertical-align: middle}
 h1, h2, h3, h4, h5, h6{font-family:'Raleway', serif; font-weight: 700; margin: 0 0 10px; color: #202020; letter-spacing: .5px}
@@ -132,82 +131,11 @@ a * {-mos-transition: all linear 0.2s; -ms-transition: all linear 0.2s; -o-trans
     margin-bottom: 10px;
     font-weight: 600
 }
-.download-cv {
-    text-align: right;
-}
-.download-cv a {
-    background-color: #ffffff;
-    border: 2px solid #31afd8;
-    color: #31afd8;
-    font-family:"Open Sans", sans-serif;
-    padding: 14px 30px;
-    -webkit-border-radius: 8px;
-    -moz-border-radius: 8px;
-    -ms-border-radius: 8px;
-    -o-border-radius: 8px;
-    border-radius: 8px;
-
-    -webkit-transition: all linear 0.2s;
-    -moz-transition: all linear 0.2s;
-    -ms-transition: all linear 0.2s;
-    -o-transition: all linear 0.2s;
-    transition: all linear 0.2s;
-
-}
-
-.download-cv a:hover{background-color: #31afd8; color: #FFF;}
-
-.download-cv a i {
-    margin-left: 5px;
-}
-
-
-
-
-
-.cand-extralink {
-    text-align: center;
-    border: 2px solid #e8ecec;
-    
-    -webkit-border-radius: 8px;
-    -moz-border-radius: 8px;
-    -ms-border-radius: 8px;
-    -o-border-radius: 8px;
-    border-radius: 8px;
-
-    margin: 30px 0;
-}
-.cand-extralink > li {
-    float: none;
-    display: inline-block;
-    margin: 0 10px;
-}
-.cand-extralink > li a {
-    float: left;
-    font-family:"Open Sans", sans-serif;
-    font-size: 15px;
-    color: #888888;
-    padding: 15px 8px;
-    position: relative;
-    margin-bottom: -5px;
-}
-.cand-extralink > li:hover a {
-    color: #31afd8;
-    border-color: #31afd8;
-}
-/* .cand-details-sec {
-    float: left;
-    width: 100%;
-} */
-
-
-
-
 /* new styles */
-.contentRows {padding: 20px 0}
+.contentRows {padding: 15px 0 }
 .contentInfo {
     position: relative;
-    padding-bottom: 30px;
+    padding-bottom: 25px;
 }
 .contentInfo p{margin-bottom: 10px}
 .contentInfo p.colorBody{margin-bottom: 5px}
@@ -324,8 +252,3 @@ a * {-mos-transition: all linear 0.2s; -ms-transition: all linear 0.2s; -o-trans
 .contact {margin-bottom: 20px}
 .contact h5{font-family:"Open Sans", sans-serif; letter-spacing: .1px; margin-bottom: 5px}
 .contact p{font-family:"Open Sans", sans-serif; font-weight: 400}
-footer {
-    padding:20px;
-    width: 100%;
-    background-color: #333333;
-}
